# MeanCurvatureLibrary

./: CMakeLists.txt  LICENSE  README.md  main.cpp
code/: CMakeLists.txt  cotangent_lb_operator.cpp  cotangent_lb_operator.h  main.cpp  mean_curvature_solver.cpp  mean_curvature_solver.h  off_model.cpp  off_model.h  project1.cpp  project1.h  types_definitions.h  uniform_lb_operator.cpp  uniform_lb_operator.h  utilities.cpp  utilities.h
code/app/: main.cpp
code/cmake/: FindLIBIGL.cmake  FindOpenMesh.cmake
code/lib/: mean_curvature_solver.cpp  mean_curvature_solver.h  types_definitions.h  uniform_lb_operator.cpp
testing/: CMakeLists.txt
testing/unit_tests/: CMakeLists.txt  test_mean_curvature_solver.cpp  test_off_model.cpp  test_utilities.cpp
